app icons added

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,22 @@
-node_modules/
-.idea/
+*.swp
+*~
+.DS_Store
+.eslintcache
+Thumbs.db
+.project
+.svn
+.nvm-version
+.vscode
+.python-version
+node_modules
+*.log
+/tags
+/atom-shell/
+/out/
+docs/output
+docs/includes
+spec/fixtures/evil-files/
+!spec/fixtures/packages/package-with-incompatible-native-module-loaded-conditionally/node_modules/
+out/
+/electron/
+/.idea/
