--- a/.gitignore
+++ b/.gitignore
@@ -11,12 +11,6 @@ Thumbs.db
 node_modules
 *.log
 /tags
-/atom-shell/
 /out/
-docs/output
-docs/includes
-spec/fixtures/evil-files/
-!spec/fixtures/packages/package-with-incompatible-native-module-loaded-conditionally/node_modules/
-out/
-/electron/
 /.idea/
+/dist/
