--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "watch": "nodemon --exec electron .",
     "pre-build": "rm -rf dist",
     "build:all-platform": "npm run pre-build && npx electron-builder -mwl",
-    "build:for-mac": "npm run pre-build && npx electron-builder -m"
+    "build:for-mac": "npm run pre-build && npx electron-builder -m",
+    "lint": "npx eslint -c .eslintrc.json src/main-process src/renderer-process",
+    "lint:fix": "npx eslint --fix -c .eslintrc.json src/main-process src/renderer-process"
   },
   "repository": {
     "type": "git",
@@ -34,8 +36,15 @@
     }
   },
   "devDependencies": {
-    "electron": "^13.1.4",
     "electron-builder": "^22.11.7",
-    "nodemon": "^2.0.9"
+    "eslint": "^7.30.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^3.4.0",
+    "nodemon": "^2.0.9",
+    "prettier": "^2.3.2"
+  },
+  "dependencies": {
+    "electron": "^13.1.5"
   }
 }
