--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "pre-build": "rm -rf dist",
     "build:all-platform": "npm run pre-build && npx electron-builder -mwl",
     "build:for-mac": "npm run pre-build && npx electron-builder -m",
-    "lint": "npx eslint -c .eslintrc.json src/main-process src/renderer-process",
-    "lint:fix": "npx eslint --fix -c .eslintrc.json src/main-process src/renderer-process"
+    "lint": "npx eslint -c .eslintrc.json src/main-process",
+    "lint:fix": "npx eslint --fix -c .eslintrc.json src/main-process"
   },
   "repository": {
     "type": "git",
@@ -36,6 +36,7 @@
     }
   },
   "devDependencies": {
+    "electron": "^13.1.5",
     "electron-builder": "^22.11.7",
     "eslint": "^7.30.0",
     "eslint-config-prettier": "^8.3.0",
@@ -44,7 +45,5 @@
     "nodemon": "^2.0.9",
     "prettier": "^2.3.2"
   },
-  "dependencies": {
-    "electron": "^13.1.5"
-  }
+  "dependencies": {}
 }
