--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -22,6 +22,14 @@
     "ecmaVersion": 2018
   },
   "rules": {
+    "node/no-unpublished-require": [
+      "error",
+      {
+        "allowModules": [
+          "electron"
+        ]
+      }
+    ],
     "strict": [
       "error",
       "global"
