--- a/package.json
+++ b/package.json
@@ -45,5 +45,7 @@
     "nodemon": "^2.0.9",
     "prettier": "^2.3.2"
   },
-  "dependencies": {}
+  "dependencies": {
+    "electron-window-state": "^5.0.3"
+  }
 }
