--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "prettier": "^2.3.2"
   },
   "dependencies": {
-    "electron-window-state": "^5.0.3"
+    "electron-window-state": "^5.0.3",
+    "uuid": "^8.3.2"
   }
 }
