--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "pre-build": "rm -rf dist",
     "build:all-platform": "npm run pre-build && npx electron-builder -mwl",
     "build:for-mac": "npm run pre-build && npx electron-builder -m",
-    "lint": "npx eslint -c .eslintrc.json src/main-process",
-    "lint:fix": "npx eslint --fix -c .eslintrc.json src/main-process"
+    "lint": "npx eslint -c .eslintrc.json src",
+    "lint:fix": "npx eslint --fix -c .eslintrc.json src"
   },
   "repository": {
     "type": "git",
