xml formatter added

--- a/package.json
+++ b/package.json
@@ -51,6 +51,8 @@
     "jsonlint": "^1.6.3",
     "jwt-decode": "^3.1.2",
     "utf8": "^3.0.0",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "xml-formatter": "^2.4.0",
+    "xml2js": "^0.4.23"
   }
 }
