--- a/package.json
+++ b/package.json
@@ -60,6 +60,6 @@
     "utf8": "^3.0.0",
     "uuid": "^8.3.2",
     "xml-formatter": "^2.4.0",
-    "xml2js": "^0.4.23"
+    "xml-js": "^1.6.11"
   }
 }
