--- a/package.json
+++ b/package.json
@@ -57,7 +57,9 @@
     "electron-window-state": "^5.0.3",
     "eventemitter2": "^6.4.4",
     "jwt-decode": "^3.1.2",
+    "markdown-it": "^12.1.0",
     "marked": "^2.1.3",
+    "sanitize-html": "^2.4.0",
     "utf8": "^3.0.0",
     "uuid": "^8.3.2",
     "xml-formatter": "^2.4.0",
