--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "electron .",
     "watch": "nodemon --exec electron .",
+    "pre-commit": "npm run lint && npm run test:all",
     "pre-build": "rm -rf dist",
     "build:all-platform": "npm run pre-build && npx electron-builder -mwl",
     "build:for-mac": "npm run pre-build && npx electron-builder -m",
@@ -50,7 +51,8 @@
     "eslint-plugin-prettier": "^3.4.0",
     "jest": "^27.0.6",
     "nodemon": "^2.0.9",
-    "prettier": "^2.3.2"
+    "prettier": "^2.3.2",
+    "spectron": "^15.0.0"
   },
   "dependencies": {
     "base-64": "^1.0.0",
