--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
     "build:for-mac": "npm run pre-build && npx electron-builder -m",
     "lint": "npx eslint -c .eslintrc.json src",
     "lint:fix": "npx eslint --fix -c .eslintrc.json src test/unit",
-    "test:all": "npm run test:unit",
-    "test:unit": "jest -c jest.config.json"
+    "test:all": "npm run bootstrap && npm run test:unit",
+    "test:unit": "npm run bootstrap && jest -c jest.config.json",
+    "bootstrap": "mkdirp output"
   },
   "repository": {
     "type": "git",
