--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "base-64": "^1.0.0",
     "electron-window-state": "^5.0.3",
     "eventemitter2": "^6.4.4",
+    "immutability-helper": "^3.1.1",
     "jwt-decode": "^3.1.2",
     "markdown-it": "^12.1.0",
     "sanitize-html": "^2.4.0",
