--- a/package.json
+++ b/package.json
@@ -1,21 +1,9 @@
 {
   "name": "sanduk",
-  "version": "0.8.1",
+  "version": "0.9.0",
   "description": "Helper app for development.",
-  "main": "src/main-process/main.js",
-  "scripts": {
-    "start": "electron .",
-    "watch": "nodemon --exec electron .",
-    "pre-commit": "npm run lint && npm run test:all",
-    "pre-build": "rm -rf dist",
-    "build:all-platform": "npm run pre-build && npx electron-builder -mwl",
-    "build:for-mac": "npm run pre-build && npx electron-builder -m",
-    "lint": "npx eslint -c .eslintrc.json src",
-    "lint:fix": "npx eslint --fix -c .eslintrc.json src test/unit",
-    "test:all": "npm run bootstrap && npm run test:unit",
-    "test:unit": "npm run bootstrap && jest -c jest.config.json",
-    "bootstrap": "mkdirp output"
-  },
+  "main": "public/electron.js",
+  "homepage": "./",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/yusufshakeel/sanduk.git"
@@ -24,14 +12,24 @@
     "sandbox",
     "code",
     "app",
-    "electron"
+    "electron",
+    "react"
   ],
   "author": "Yusuf Shakeel",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/yusufshakeel/sanduk/issues"
   },
-  "homepage": "https://github.com/yusufshakeel/sanduk#readme",
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
+    "pre-build": "rm -rf dist build",
+    "electron:dev": "concurrently -k \"cross-env BROWSER=none npm run start\" \"wait-on tcp:3000 && electron .\"",
+    "build:all-platform": "npm run pre-build && npm run build && npx electron-builder -mwl",
+    "build:for-mac": "npm run pre-build && npm run build && electron-builder -m"
+  },
   "build": {
     "appId": "com.yusufshakeel.sanduk",
     "mac": {
@@ -41,31 +39,48 @@
     "dmg": {
       "background": "resources/app-icons/stable/background.tiff",
       "icon": "resources/app-icons/stable/sanduk.icns"
+    },
+    "files": [
+      "build/**/*"
+    ],
+    "extraMetadata": {
+      "main": "build/electron.js"
     }
   },
-  "devDependencies": {
-    "electron": "^13.1.5",
-    "electron-builder": "^22.11.7",
-    "eslint": "^7.30.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-prettier": "^3.4.0",
-    "jest": "^27.0.6",
-    "nodemon": "^2.0.9",
-    "prettier": "^2.3.2",
-    "spectron": "^15.0.0"
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   },
   "dependencies": {
-    "base-64": "^1.0.0",
+    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/react": "^11.1.0",
+    "@testing-library/user-event": "^12.1.10",
+    "electron-is-dev": "^2.0.0",
     "electron-window-state": "^5.0.3",
-    "eventemitter2": "^6.4.4",
-    "immutability-helper": "^3.1.1",
-    "jwt-decode": "^3.1.2",
-    "markdown-it": "^12.1.0",
-    "sanitize-html": "^2.4.0",
-    "utf8": "^3.0.0",
-    "uuid": "^8.3.2",
-    "xml-formatter": "^2.4.0",
-    "xml-js": "^1.6.11"
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-scripts": "4.0.3",
+    "web-vitals": "^1.0.1"
+  },
+  "devDependencies": {
+    "concurrently": "^6.2.1",
+    "cross-env": "^7.0.3",
+    "electron": "^14.0.0",
+    "electron-builder": "^22.11.7",
+    "wait-on": "^6.0.0"
   }
 }
