--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "lint:fix": "npx eslint --fix -c .eslintrc.json src",
     "electron:dev": "concurrently -k \"cross-env BROWSER=none npm run start\" \"wait-on tcp:3000 && electron .\"",
     "build:all-platform": "npm run pre-build && npm run build && npx electron-builder -mwl",
-    "build:for-mac": "npm run pre-build && npm run build && electron-builder -m"
+    "build:for-mac": "npm run pre-build && npm run build && npx electron-builder -m"
   },
   "build": {
     "appId": "com.yusufshakeel.sanduk",
