--- a/package.json
+++ b/package.json
@@ -50,12 +50,6 @@
       "main": "build/electron.js"
     }
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
   "browserslist": {
     "production": [
       ">0.2%",
@@ -96,9 +90,11 @@
     "electron-builder": "^22.11.7",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-jest-dom": "^3.9.2",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.25.2",
+    "eslint-plugin-testing-library": "^3.10.2",
     "prettier": "^2.4.1",
     "wait-on": "^6.0.0"
   }
