--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "electron-window-state": "^5.0.3",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
+    "react-ace": "^9.4.3",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.0.1"
