--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
     "react-ace": "^9.4.3",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "uuid": "^8.3.2",
     "web-vitals": "^1.0.1"
   },
   "devDependencies": {
