--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.8.3",
+    "base-64": "^1.0.0",
     "electron-is-dev": "^2.0.0",
     "electron-window-state": "^5.0.3",
     "prop-types": "^15.7.2",
@@ -84,6 +85,7 @@
     "react-ace": "^9.4.3",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "utf8": "^3.0.0",
     "uuid": "^8.3.2",
     "web-vitals": "^1.0.1"
   },
