--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "base-64": "^1.0.0",
     "electron-is-dev": "^2.0.0",
     "electron-window-state": "^5.0.3",
+    "jwt-decode": "^3.1.2",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-ace": "^9.4.3",
