--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "pre-commit": "npm run lint",
     "lint": "npx eslint -c .eslintrc.json src",
     "lint:fix": "npx eslint --fix -c .eslintrc.json src",
-    "electron:dev": "concurrently -k \"cross-env BROWSER=none npm run start\" \"wait-on tcp:3000 && electron .\"",
+    "start:electron": "concurrently -k \"cross-env BROWSER=none npm run start\" \"wait-on tcp:3000 && electron .\"",
     "build:all-platform": "npm run pre-build && npm run build && npx electron-builder -mwl",
     "build:for-mac": "npm run pre-build && npm run build && npx electron-builder -m"
   },
