--- a/package.json
+++ b/package.json
@@ -88,7 +88,8 @@
     "react-scripts": "4.0.3",
     "utf8": "^3.0.0",
     "uuid": "^8.3.2",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "xml-formatter": "^2.4.1"
   },
   "devDependencies": {
     "concurrently": "^6.2.1",
