xml to json tool

--- a/package.json
+++ b/package.json
@@ -89,7 +89,8 @@
     "utf8": "^3.0.0",
     "uuid": "^8.3.2",
     "web-vitals": "^1.0.1",
-    "xml-formatter": "^2.4.1"
+    "xml-formatter": "^2.4.1",
+    "xml-js": "^1.6.11"
   },
   "devDependencies": {
     "concurrently": "^6.2.1",
