--- a/package.json
+++ b/package.json
@@ -80,12 +80,15 @@
     "base-64": "^1.0.0",
     "electron-is-dev": "^2.0.0",
     "electron-window-state": "^5.0.3",
+    "immutability-helper": "^3.1.1",
     "jwt-decode": "^3.1.2",
+    "markdown-it": "^12.2.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-ace": "^9.4.3",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "sanitize-html": "^2.5.1",
     "utf8": "^3.0.0",
     "uuid": "^8.3.2",
     "web-vitals": "^1.0.1",
