--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "pre-build": "rm -rf dist",
     "build:all-platform": "npm run pre-build && npx electron-builder -mwl",
     "build:for-mac": "npm run pre-build && npx electron-builder -m",
-    "lint": "npx eslint -c .eslintrc.json src",
+    "lint": "npm run lint:src && npm run lint:test",
+    "lint:src": "npx eslint -c .eslintrc.json src",
+    "lint:test": "npx eslint -c .eslintrc.json test/unit",
     "lint:fix": "npx eslint --fix -c .eslintrc.json src test/unit",
     "lint:fix:test": "npx eslint --fix -c .eslintrc.json test/unit",
     "lint:fix:src": "npx eslint --fix -c .eslintrc.json src",
