--- a/jest.config.json
+++ b/jest.config.json
@@ -18,7 +18,8 @@
   ],
   "coverageThreshold": {
     "global": {
-      "branches": 100,
+      "statements": 100,
+      "branches": 90,
       "functions": 100,
       "lines": 100
     }
