file management code added, test

--- a/jest.config.json
+++ b/jest.config.json
@@ -10,7 +10,10 @@
     "!**/dist/**",
     "!**/node_modules/**",
     "!**/resources/**",
-    "!**/src/main-process/**",
+    "!**/src/main-process/constants/**",
+    "!**/src/main-process/application-menu.js",
+    "!**/src/main-process/file-management.js",
+    "!**/src/main-process/main.js",
     "!**/src/renderer-process/app.js",
     "!**/src/renderer-process/tools/**",
     "!**/src/static/**",
