test, jest config update, ui fix

--- a/jest.config.json
+++ b/jest.config.json
@@ -15,6 +15,7 @@
     "!**/src/main-process/file-management.js",
     "!**/src/main-process/main.js",
     "!**/src/renderer-process/app.js",
+    "!**/src/renderer-process/constants/ui-contants.js",
     "!**/src/renderer-process/tools/**",
     "!**/src/static/**",
     "!**/test/**"
