--- a/package.json
+++ b/package.json
@@ -63,8 +63,8 @@
   },
   "dependencies": {
     "base-64": "^1.0.0",
+    "deep-sort-object": "^1.0.2",
     "electron-window-state": "^5.0.3",
-    "eventemitter2": "^6.4.4",
     "immutability-helper": "^3.1.1",
     "jwt-decode": "^3.1.2",
     "markdown-it": "^12.1.0",
