--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "base-64": "^1.0.0",
     "deep-sort-object": "^1.0.2",
     "electron-window-state": "^5.0.3",
+    "eventemitter2": "^6.4.5",
     "fast-csv": "^4.3.6",
     "immutability-helper": "^3.1.1",
     "jwt-decode": "^3.1.2",
